objects/Trip__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Trips</relationshipLabel>
        <relationshipName>Trips</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>There are no Contacts matching your search that are associated with the Account you have associated with this trip</errorMessage>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <infoMessage>Contacts must be associated with the Account you have specified for this trip</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Trips</relationshipLabel>
        <relationshipName>Trips</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Distance_Traveled__c</fullName>
        <formula>Ending_Mileage__c  -  Starting_Mileage__c</formula>
        <label>Distance Traveled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ending_Mileage__c</fullName>
        <label>Ending Mileage</label>
        <precision>8</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Trips</relationshipLabel>
        <relationshipName>Trips</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Starting_Mileage__c</fullName>
        <label>Starting Mileage</label>
        <precision>8</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Trip</label>
    <nameField>
        <displayFormat>T-{00000}</displayFormat>
        <label>Trip Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trips</pluralLabel>
    <recordTypes>
        <fullName>Others</fullName>
        <active>true</active>
        <description>Admin only - enables entering trips for other people - i.e. Contacts associated with Accounts</description>
        <label>Others</label>
    </recordTypes>
    <recordTypes>
        <fullName>Self</fullName>
        <active>true</active>
        <description>Primary</description>
        <label>Self</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Positive_Mileage</fullName>
        <active>true</active>
        <description>Enforces that ending mileage is greater than beginning mileage on a Trip</description>
        <errorConditionFormula>Ending_Mileage__c  &lt;  Starting_Mileage__c</errorConditionFormula>
        <errorDisplayField>Ending_Mileage__c</errorDisplayField>
        <errorMessage>Distance traveled must be a positive value</errorMessage>
    </validationRules>
</CustomObject>